fix code color in dark mode

--- a/custom.css
+++ b/custom.css
@@ -996,7 +996,7 @@ html[data-theme=light] {
     text-shadow: unset;
 }
 
-.CodeMirror {
+.cm-s-solarized.CodeMirror {
     -moz-box-shadow: unset;
     -webkit-box-shadow: unset;
     box-shadow: unset;
